// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<I18nSpecialDate /> formats TMT date only with year 1`] = `
<DocumentFragment>
  1980
</DocumentFragment>
`;

exports[`<I18nSpecialDate /> formats TMT date with day, month and year 1`] = `
<DocumentFragment>
  Nov 21, 1980
</DocumentFragment>
`;

exports[`<I18nSpecialDate /> formats TMT date with month and year 1`] = `
<DocumentFragment>
  Nov, 1980
</DocumentFragment>
`;

exports[`<I18nSpecialDate /> formats date from ISO format 1`] = `
<DocumentFragment>
  Jan 1, 2021
</DocumentFragment>
`;

exports[`<I18nSpecialDate /> formats date from timestamp 1`] = `
<DocumentFragment>
  Sep 2, 2013
</DocumentFragment>
`;
